Some format adjustments

--- a/docs/en-gb/modules/external-online-shops/pages/shopify-app.adoc
+++ b/docs/en-gb/modules/external-online-shops/pages/shopify-app.adoc
@@ -5,12 +5,12 @@
 
 On this page, you will learn how to connect your plentymarkets account with Shopify so you can synchronise your data between both systems. The two assistants will guide you through all required steps so you can start right away.
 
-[#10]
+[#about]
 == About Shopify
 
 Just like plentymarkets, Shopify is a complete e-commerce platform that lets you start, grow, and manage your online business. As Shopify is entirely cloud-based and hosted, there is no need to worry about upgrading or maintaining the software or any web servers.
 
-[#20]
+[#registration]
 == Registering with Shopify
 
 To register with Shopify, follow the app installation steps below.
@@ -35,15 +35,15 @@ Registering with Shopify:
 *_Tip:_* The toggle on the right tells you whether a client is connected. +
 → You can now carry out the import/export settings as desired.
 
-[#30]
+[#integration]
 == Integrating Shopify
 
 The following chapters walk you through the integration of Shopify via the usage of assistants.
 
-[#40]
+[#shopify-configuration-assistant]
 === Using the Shopify Configuration assistant
 
-The *Shopify Configuration* assistant will guide you through the required steps to set up your Shopify connection. <<table-shopify-configuration-assistant>> shows which settings you can carry out in the individual steps of the assistant. You can find the assistant in the *Setup » Assistants* menu in the Omni-Channel area.
+The *Shopify Configuration* assistant will guide you through the required steps to set up your Shopify connection. <<table-shopify-configuration-assistant>> shows which settings you can carry out in the individual steps of the assistant. You can find the assistant in the *Setup » Assistants* menu in the *Omni-Channel* area.
 
 [.instruction]
 Using the *Shopify Configuration* assistant:
@@ -104,14 +104,13 @@ Link your plentymarkets warehouses to Shopify locations. You can link multiple p
 
 | Shipping profiles mapping
 | Link Shopify and plentymarkets shipping profiles. By doing so, shipping profiles for imported orders will automatically be determined for imported orders. For each existing Shopify profile you can choose a corresponding profile from plentymarkets.
-
 |======
 --
 
-[#50]
+[#input-field-mapping-assistant]
 === Using the Input field mapping assistant
 
-The *Input field mappings* assistant helps you to create custom mappings between Shopify input fields and plentymarkets data fields. These mappings will then be used for the item export. <<table-input-field-mapping>> shows which settings you can carry out in the individual steps of the assistant. You can find the Input field mapping assistant in the *Setup » Assistants* menu in the Omni-Channel area.
+The *Input field mappings* assistant helps you to create custom mappings between Shopify input fields and plentymarkets data fields. These mappings will then be used for the item export. <<table-input-field-mapping>> shows which settings you can carry out in the individual steps of the assistant. You can find the Input field mapping assistant in the *Setup » Assistants* menu in the *Omni-Channel* area.
 
 [.instruction]
 Using the *Input field mapping* assistant:
@@ -170,20 +169,19 @@ The namespace is a container for a Metafield set. You can assign multiple Metafi
 
 | Property
 | This step is only available if you chose the option *Property* in the *plentymarkets source input field* step. Select the property you want to use as export data source.
-
 |======
 --
 
-[#60]
+[#additional-settings]
 == Additional settings
 
 The following chapters list all additional settings that you may want to carry out in order to further configure your Shopify connection with plentymarkets.
 
-[#70]
+[#variation-stock-limitation]
 === Setting up the variation stock limitation
 
 When exporting stock, the stock *limitation* is also exported to Shopify. +
-Depending on the selected *limitation*, the Shopify checkbox *Continue selling when out of stock* is activated or deactivated. For further information, refer to <<table-stock-limitation>>.
+Depending on the selected *limitation*, the Shopify checkbox *Continue selling when out of stock* is activated or deactivated. For further information, see <<table-stock-limitation>>.
 
 [[table-stock-limitation]]
 .Stock limitation options
@@ -202,18 +200,18 @@ Depending on the selected *limitation*, the Shopify checkbox *Continue selling w
 
 |====
 
-[#80]
+[#custom-properties]
 === Importing custom order properties
 
 The Shopify integration also enables you to import custom order properties via the *Order import* process. An example is the link:https://apps.shopify.com/product-personalizer[Product Personalizer plugin^] which allows you to record custom notes, such as custom engravings. +
 If you want to import such properties, make sure that the plentymarkets item has a characteristic where the option *Order characteristic* is activated. This can be done in the *Setup » Item » Characteristics* menu. When creating a new characteristic, tick the *Order characteristic* box on the right.
 
-[#90]
+[#event-procedures]
 === Setting up event procedures
 
 plentymarkets event procedures enable you to better manage your orders on Shopify. More information regarding plentymarkets event procedures can be found on the xref:automation:event-procedures.adoc[event procedures] manual page.
 
-[#100]
+[#gdpr]
 === GDPR considerations
 
 Due to GDPR specifications, the following policies for customer accounts and orders have been implemented.
@@ -225,7 +223,7 @@ Due to GDPR specifications, the following policies for customer accounts and ord
 |*Scenario* |*Explanation*
 
 | *Customer is imported as guest*
-| If the customer doesn't have a plentymarkets account, the authenticity of the customer isn't guaranteed by either part, even if the contact details on several orders are identical.  +
+| If the customer doesn't have a plentymarkets account, the authenticity of the customer isn't guaranteed by either part, even if the contact details on several orders are identical. +
 
 *Tip:* You can convert contacts of the type *Guest* to regular contacts if required. For more information, see the xref:crm:quick-search.adoc#convert-guest-account[quick search] manual page.
 
@@ -236,8 +234,8 @@ Due to GDPR specifications, the following policies for customer accounts and ord
 | It is checked whether a customer from Shopify with this external contact ID has already been imported in the past. If this is the case, the new order import is linked to the contact.
 |===
 
-[#110]
+[#additional-shops]
 === Connecting additional Shopify shops
 
-Each new connection requires a separate plentymarkets client and Shopify account.
+Each new connection requires a separate plentymarkets client and Shopify account. +
 To create an additional connection you need to install the plentymarkets app in each Shopify shop you wish to connect.
