--- a/docs/de-de/modules/external-online-shops/pages/shopify-app.adoc
+++ b/docs/de-de/modules/external-online-shops/pages/shopify-app.adoc
@@ -3,6 +3,8 @@
 :description: Erfahre, wie du dein plentymarkets Konto mit Shopify verknüpfst, um deine Daten zu synchronisieren.
 :author: team-plenty-channel
 
+:page-index: false
+
 Auf dieser Seite erfährst du, wie du dein plentymarkets Konto mit Shopify verknüpfst, um deine Daten zwischen beiden Systemen zu synchronisieren. Die beiden Assistenten zur Einrichtung von Shopify leiten dich durch alle notwendigen Schritte, damit du direkt durchstarten kannst.
 
 [#about]
