--- a/docs/en-gb/modules/orders/pages/order-statuses.adoc
+++ b/docs/en-gb/modules/orders/pages/order-statuses.adoc
@@ -173,7 +173,7 @@ Configuring columns:
 
 [[table-order-status-columns]]
 .Columns in the status overview
-[cols="1.3"]
+[cols="1,3"]
 |===
 |Column |Explanation
 
@@ -199,7 +199,7 @@ Configuring columns:
 |===
 
 [#order-status-group-functions]
-== Using group functions:
+== Using group functions
 
 There are some group functions that you can use in order to carry out actions for multiple statuses at once. You can use a group function to <<#change-visibility, change the visibility>>, <<#change-colour, change the colour>> or <<#delete-status, delete specific statuses>>.
 
