--- a/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
@@ -1987,10 +1987,10 @@ Farbe ändern:
 . Öffne das Menü *Einrichtung » Aufträge » Auftragsstatus*.
 . Führe die Suche (material:search[]) aus, um Auftragsstatus anzuzeigen.
 . Setze für einen oder mehrere Status ein Häkchen (material:check_box[]).
-. Klicke oben auf die Funktion *Farbe ändern* (material:color_lense[]). +
+. Klicke oben auf die Funktion *Farbe ändern* (material:color_lens[]). +
 → Das Fenster *Farbe ändern* wird geöffnet.
 . Wähle eine neue Farbe. Gib dazu entweder einen HEX-Code ein oder wähle Werte für RGB (Red, Green, Blue) bzw. HSL (Schattierung, Sättigung und Helligkeit).
-. Klicke auf *Farbe ändern* (material:color_lense[role=skyBlue]). +
+. Klicke auf *Farbe ändern* (material:color_lens[role=skyBlue]). +
 → Die Farbe wird geändert.
 
 [#delete-status]
