--- a/docs/en-gb/modules/orders/pages/order-statuses.adoc
+++ b/docs/en-gb/modules/orders/pages/order-statuses.adoc
@@ -248,10 +248,10 @@ Changing the colour:
 . Go to the *Setup » Orders » Order status* menu.
 . Carry out the search (material:search[]) to display order statuses.
 . Place a check mark for one or several statuses (material:check_box[]).
-. At the top, click on the *Change colour* (material:color_lense[]) function. +
+. At the top, click on the *Change colour* (material:color_lens[]) function. +
 → The *Change colour* window opens.
 . Select a new colour. To do so, either enter a HEX code or select values for RGB (Red, Green, Blue) or HSL (Hue, Saturation, Lightness).
-. Click on *Change colour* (material:color_lense[role=skyBlue]). +
+. Click on *Change colour* (material:color_lens[role=skyBlue]). +
 → The colour is changed.
 
 [#delete-status]
