Add phone and email fields to Addresses overview

--- a/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
@@ -552,7 +552,7 @@ Ein Klick auf *Daten aktualisieren* (material:refresh[]) oben rechts lädt den B
 
 Hier siehst du die zum Kontakt gespeicherten Adressen. Beachte, dass die Anzeige hier auf 25 Adressdatensätze begrenzt ist.
 
-Mit einem Klick auf *Spalten konfigurieren* (material:settings[]) oben rechts entscheidest du, welche Spalten im Bereich *Adressen* angezeigt werden. Klicke auf material:drag_indicator[], um die Reihenfolge der Spalten per Drag-and-drop zu verschieben. Die folgenden Spalten sind verfügbar:
+Mit einem Klick auf *Spalten konfigurieren* (material:settings[]) oben rechts entscheidest du, welche Spalten im Bereich *Adressen* in der Übersicht angezeigt werden. Klicke auf material:drag_indicator[], um die Reihenfolge der Spalten per Drag-and-drop zu verschieben. Die folgenden Spalten sind verfügbar:
 
 * ID
 * Firma
@@ -565,6 +565,8 @@ Mit einem Klick auf *Spalten konfigurieren* (material:settings[]) oben rechts en
 * PLZ
 * Ort 
 * Land
+* Telefon
+* E-Mail
 
 Ein Klick auf *Daten aktualisieren* (material:refresh[]) oben rechts lädt den Bereich *Adressen* neu.
 
