--- a/docs/en-gb/modules/crm/pages/edit-contact.adoc
+++ b/docs/en-gb/modules/crm/pages/edit-contact.adoc
@@ -552,7 +552,7 @@ Click on *Refresh data* (material:refresh[]) in the top right to refresh the *Or
 
 Here, you can see the addresses that are saved for the contact. Note that only 25 address data records can be shown.
 
-Click on *Configure columns* (material:settings[]) on the top right and decide which columns to show in the *Addresses* area. Click on material:drag_indicator[] to change the order of the columns with drag-and-drop. The following columns are available:
+Click on *Configure columns* (material:settings[]) on the top right and decide which columns to show in the overview of the *Addresses* area. Click on material:drag_indicator[] to change the order of the columns with drag-and-drop. The following columns are available:
 
 * ID
 * Company
@@ -565,6 +565,8 @@ Click on *Configure columns* (material:settings[]) on the top right and decide w
 * Postcode
 * Town
 * Country
+* Telephone
+* Email
 
 Click on *Refresh data* (material:refresh[]) in the top right to refresh the *Addresses* area.
 
