ADD filter order and invoice nr

--- a/docs/de-de/modules/auftraege/pages/order-search.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-search.adoc
@@ -24,8 +24,6 @@ Klicke dann auf icon:search[role="darkGrey"], um die Suche auszuführen.
 
 Im Bearbeitungsmodus (icon:design_inline_edit[set=plenty]) der Auftrags-Übersicht unter *Einstellungen » Filter-Einstellungen* werden dir die Filter in den Spalten *Verfügbare Filter* und *Angezeigte Filter* angezeigt. Entscheide selbst, welche Filter für die Auftragssuche sichtbar sein sollen.
 
-// umbenennen in "Spaltenanzahl für Filter"
-
 [TIP]
 .Anordnung der Filter anpassen
 ======
@@ -102,43 +100,43 @@ a|Wähle ein Tag aus der Dropdown-Liste, um nach Aufträgen mit diesem Tag zu su
 a|Wähle eine Dokumentart aus der Dropdown-Liste, um nach Aufträgen dieser Dokumentart zu suchen. +
 Es stehen die folgenden Dokumentarten zur Verfügung: +
 
+* material:description[] *Abhollieferung*
+* material:description[] *Abrechnungsbericht*
+* material:description[] *Angebot*
 * material:description[] *Auftragsbestätigung*
+* material:description[] *EBICS-Hash*
 * material:description[] *Externe Gutschrift*
 * material:description[] *Externe Rechnung*
 * material:description[] *Gelangensbestätigung*
-* material:description[] *Angebot*
 * material:description[] *Gutschrift*
+* material:description[] *Kassenjournal*
+* material:description[] *Kassensturz*
 * material:description[] *Korrekturbeleg*
 * material:description[] *Lieferschein*
 * material:description[] *Mahnung*
+* material:description[] *Mahnungsstorno*
+* material:description[] *POS Gutscheinbeleg*
 * material:description[] *Proformarechnung*
 * material:description[] *Rechnung*
 * material:description[] *Reparaturschein*
 * material:description[] *Rücksendeschein*
 * material:description[] *Sammelgutschrift*
 * material:description[] *Sammelrechnung*
-* material:description[] *Stornobeleg Gutschrift*
-* material:description[] *Mahnungsstorno*
-* material:description[] *Stornobeleg Rechnung*
-* material:description[] *POS Gutscheinbeleg*
-* material:description[] *Stornierung*
-* material:description[] *Kassensturz*
-* material:description[] *Z-Bericht*
-* material:description[] *Abhollieferung*
-* material:description[] *Abrechnungsbericht*
-* material:description[] *EBICS-Hash*
-* material:description[] *Kassenjournal*
 * material:description[] *SEPA-Lastschrift*
+* material:description[] *Stornierung*
+* material:description[] *Stornobeleg Gutschrift*
+* material:description[] *Stornobeleg Rechnung*
 * material:description[] *Wareneingangserfassung*
+* material:description[] *Z-Bericht*
 
 | *Zahlungsstatus*
 a|Wähle einen Zahlungsstatus aus der Dropdown-Liste, um nach Aufträgen mit diesem Zahlungsstatus zu suchen. Folgende Zahlungsstatus sind wählbar: +
 
-* Überbezahlt +
+* Ausstehend +
 * Bezahlt +
-* Teilweise bezahlt +
-* Im Voraus bezahlt +
-* Ausstehend
+* Teilbezahlt +
+* Vorausbezahlt +
+* Überbezahlt
 
 | *Hauptaufträge ausschließen*
 a|Lege über die Dropdown-Liste fest, ob bei der Suche auch Hauptaufträge mit ausgegeben werden sollen oder nicht. Dies bezieht sich z.B. auf die Suche von Lieferaufträgen. Die folgenden Optionen stehen dir zur Verfügung. +
