--- a/docs/en-gb/modules/crm/pages/faq.adoc
+++ b/docs/en-gb/modules/crm/pages/faq.adoc
@@ -135,6 +135,7 @@ Check also in your entire plentymarkets system all menus where you linked email 
 
 If you have already created a template in multiple languages, you have to manually adjust the content of them in the new EmailBuilder. Use the copy function to do so.
 
+You can find a practical example with instructions which settings to check after the migration of the old email templates on the user manual page xref:crm:practical-example-migratoin-templates.adoc#[EmailBuilder: Todo after the migration of the old email templates]. +
 Further details about the new EmailBuilder can be found in our xref:crm:emailbuilder.adoc#[user manual].
 
 --
