--- a/docs/en-gb/modules/data/pages/catalogues-status.adoc
+++ b/docs/en-gb/modules/data/pages/catalogues-status.adoc
@@ -1,5 +1,5 @@
 = Checking catalogue export statuses
-:keywords:
+:keywords: catalogue status, catalog status, export status
 :description:
 :page-index:
 :author: team-plenty-channel
@@ -28,8 +28,9 @@ You are in the menu *Data » Catalogue export status*. When you open the menu, a
 * *Preview* = The export creates a preview of the first five records of the catalogue.
 * *Direct* = The export is processed immediately.
 * *Async* = The export is split into jobs. These jobs are enqueued.
+* *Live* = The export was started as a *live export*. The file is downloaded to your computer automatically.
 * *Dev cache* = A cached version of the catalogue is exported. The cache is updated every 20 minutes. +
-*_Tip:_* Exports of the type *Dev cache* are not shown in the overview. However, you can filter by this type to show these exports.
+*_Tip:_* Exports of the type *Dev cache* are not shown in the overview list automatically. However, you can filter by this type to show these exports.
 //end::export-types[]
 
 | *Catalogue name*
@@ -53,7 +54,7 @@ You are in the menu *Data » Catalogue export status*. When you open the menu, a
 [.collapseBox]
 .What is a job?
 --
-When exports of the type *Async* are started, the data to be exported is split into packages. Each package contains 500 lines, the last package may contain fewer. Each of these packages is a job. Each of these jobs is enqueued.
+When exports of the type *Async* are started, the data to be exported is split into packages. Each package contains 500 lines. The last package may contain fewer lines. Each of these packages is a job. Each of these jobs is enqueued.
 
 *_Example:_* An export contains 2,300 lines. The export is split into 5 jobs: 4 jobs with 500 lines each and one job with 300 lines. The progress bar shows how many of these 5 jobs have already been exported.
 --
@@ -173,20 +174,20 @@ The list of logs is shown on the left. Click on one of the logs to show more det
 //| *Download private export* +
 //(material:file_download[])
 //| *_Note:_* Use this download if you use a private link. +
-//*_Note:_* The download button is only available for *Async* exports. +
+//*_Note:_* The download button is only available for *Async* exports.
 
 //. Click on *Download private export* (material:file_download[]). +
-//→ The export starts. +
+// → The export starts. +
 //*_Important:_* The export runs in the background. Note that there will be _no_ window for downloading the file straight away. Even exporting small amounts of data will take around 30 minutes. +
-//Once the export is finished, you will be notified (material:notifications_none[]) that the export file can be downloaded.
+//→ Once the export is finished, you will be notified (material:notifications_none[]) that the export file can be downloaded.
 //. In the notification centre, click on material:link[] *Download*. +
 //*_Tip:_* The notification is no longer shown? You can always access the file using the URL shown in the *Download settings*.
 //. Save the file on your computer.
 
 | *Download public export* +
 (material:file_download[])
-| *_Note:_* Use this download if you use a public link. Settings for the public link are carried out in the *Download settings* of a catalogue. +
-*_Note:_* The download button is only available for *Async* exports. +
+| *_Note:_* Use this download if you use a public link. You can change the settings for public links in the *Download settings* of the catalogue. +
+*_Note:_* The download button is only available for *Async* exports.
 
 . Click on *Download public export* (material:file_download[]). +
 → The export starts. +
