--- a/docs/en-gb/modules/data/partials/catalogues-manage.adoc
+++ b/docs/en-gb/modules/data/partials/catalogues-manage.adoc
@@ -81,9 +81,11 @@ You can delete one catalogue or multiple catalogues at the same time.
 Deleting one catalogue::
 +
 --
+//tag::delete-catalogue[]
 [.instruction]
-Deleting catalogues:
+Deleting one catalogue:
 
+//tag::delete-catalogue[]
 . Go to *Data » Catalogues*. +
 → The catalogue overview opens.
 . In the row of the catalogue that you want to delete, click on the further actions (material:more_vert[]).
@@ -97,7 +99,7 @@ Deleting catalogues:
 → You are asked to confirm your decision.
 . Confirm the deletion. +
 → The catalogue is deleted.
-
+//end::delete-catalogue[]
 --
 
 Deleting multiple catalogues::
@@ -122,11 +124,12 @@ Deleting several catalogues:
 [#250]
 == Restoring another catalogue version
 
-You can restore a previous catalogue version via the further actions or in the view of a catalogue. The last 100 versions of a catalogue are available.
+You can restore a previous catalogue version via the further actions or in the view of a catalogue. The last 100 versions of the catalogue are available.
 
 [.instruction]
 Restoring a catalogue version:
 
+//tag::reset-catalogue[]
 . Go to *Data » Catalogues*. +
 → The catalogue overview opens.
 . *_Alternative 1:_* In the catalogue overview
@@ -137,9 +140,10 @@ Restoring a catalogue version:
   .. In the toolbar, click on the additional actions (icon:ellipsis-v[]).
   .. Click on *Restore catalogue version* (material:history[]).
 . In the window shown, select the version that you want to restore. +
-*_Tip:_* The last 100 versions of a catalogue are available.
+*_Tip:_* The last 100 versions of the catalogue are available.
 . Click on *Restore*. +
 → The catalogue version is restored and displayed in the catalogue overview.
+//end::reset-catalogue[]
 
 [#240]
 == Restoring a deleted catalogue
@@ -151,7 +155,7 @@ Restoring a deleted catalogue:
 
 . Go to *Data » Catalogues*. +
 → The catalogue overview opens.
-. Click on *Restore deleted catalogue* (material:undo[]). +
+. Click on *Restore deleted catalogue* (material:undo[role="orange"]). +
 → A window opens.
 . Select a catalogue from the drop-down list.
 . Click on *Restore*. +
