UPDATE doc archive

--- a/docs/en-gb/modules/orders/pages/document-archive-test-phase.adoc
+++ b/docs/en-gb/modules/orders/pages/document-archive-test-phase.adoc
@@ -136,7 +136,7 @@ This is a default column.
 This column is not shown by default.
 
 | *Reversal reference*
-|If a reversal document is available, the reversed document is shown. If a reversed document exists, the reversal document is shown in this column.
+|If a reversal document is available, the reversed document is shown. If a reversed document exists, the reversal document is shown.
 
 |===
 
