--- a/docs/de-de/modules/maerkte/partials/kaufland-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/kaufland-recommended-mappings.adoc
@@ -112,7 +112,7 @@ empfohlene Zuordnung:
 *_Tipp:_* Als Auswahlwerte der Eigenschaft kannst du zum Beispiel alle Kaufland-Lager verwenden.
 
 3+| Produktdaten +
-*_Hinweis:_* Diese Daten werden benötigt, um neue Produkte auf Kaufland zu erstellen. Die Daten, die hier verknüpft werden können, unterscheiden sich je nach Produkategorie.
+*_Hinweis:_* Diese Daten werden benötigt, um neue Produkte auf Kaufland zu erstellen. Die Daten, die hier verknüpft werden können, unterscheiden sich je nach Produktkategorie.
 
 | EAN
 | ja
