--- a/docs/en-gb/modules/data/pages/export-marketplace-formats.adoc
+++ b/docs/en-gb/modules/data/pages/export-marketplace-formats.adoc
@@ -38,7 +38,7 @@ Catalogues with marketplace formats allow you to tailor your item information ex
 * You choose for each market and sometimes even for each market category which variation data is going to be published on the market. For example, you can use properties to export different variation names and descriptions to different markets.
 * You can easily copy and adjust well configured catalogues.
 
-*_Let’s talk straight: Aren#t there any disadvantages?_*
+*_Let’s be honest: Are there any disadvantages?_*
 
 It really depends. The catalogues give you maximum flexibility. You can map data fields any way you like. However, that also means that mappings are not checked on whether or not they make any sense. As an example, the system will not prevent you from mapping the variation ID as the price. You might only notice such a mistake when your variations are either not exported to the market or when your t-shirts suddenly cost a few thousand bucks. However, this is only a disadvantage if you don’t work carefully. The more familiar you are with the catalogues, the easier it will be for you to map the data fields. You can always copy and adjust well configured catalogues. That also makes your work easier.
 
@@ -240,9 +240,9 @@ include::markets:partial$catalogue-mapping.adoc[tag=own-mappings-config]
 === Recalculating numerical values (Formula)
 
 [discrete]
-===== You save a formula that is applied to numerical values during the export
+===== You save a mathematical formula. This formula is applied to numerical values during the export.
 
-Mathematical calculations allow you to change values automatically during the export.
+Mathematical calculations allow you to change numerical values automatically during the export.
 
 * This function is new and has not been implemented for all marketplace formats yet.
 * This function only works for data fields that contain numerical values.
@@ -259,6 +259,8 @@ You want to set up a stock buffer for the market. So a specific quantity is subs
 [[catalogue-formula]]
 .Formula for stock buffer
 image::data:catalogue-stock-buffer.png[]
+
+TODO: Insert screenshot
 ////
 
 [.collapseBox]
@@ -291,16 +293,16 @@ Exporting catalogue data to a file once:
 → The catalogue overview opens.
 . Click on the catalogue. +
 → The catalogue opens.
-. Click on the *Settings* tab on the left. +
+. Click on the *Settings* tab (icon:cog[]) on the left. +
 → The different settings options are shown.
 . Check the settings and change them as needed. +
 *_Tip:_* Make sure that the option *Receive notifications* is active in the *Download settings*.
 . Save (terra:save[]) the settings. +
-. Click on material:file_download[] in the toolbar up top. +
+. In the toolbar at the top, click on material:file_download[]. +
 → The export will start and it runs in the background.
 You can continue working during the export process. +
-*_Important:_* The export runs in the background. Note that there will be _no_ window for downloading the file straight away. Even exporting small amounts of data will take around 30 minutes.
-. Once the export is finished, you will be notified (material:notifications_none[]) that the export file can be downloaded.
+*_Important:_* The export runs in the background. Note that there will be _no_ window for downloading the file straight away. Even exporting small amounts of data will take around 30 minutes. +
+Once the export is finished, you will be notified (material:notifications_none[]) that the export file can be downloaded.
 . In the notification centre, click on material:link[] *Download*. +
 *_Tip:_* The notification is no longer shown? You can always access the file using the URL shown in the *Download settings*.
 . Save the file on your computer.
@@ -319,7 +321,7 @@ Setting up regular file exports:
 → The catalogue overview opens.
 . Click on the catalogue. +
 → The catalogue opens.
-. Click on the *Settings* tab on the left. +
+. Click on the *Settings* tab (icon:cog[]) on the left. +
 → The different settings options are shown.
 . Carry out the settings. Note <<#table-file-export>>.
 . Save (terra:save[]) the settings. +
