--- a/docs/de-de/modules/daten/partials/catalogue-manual-download.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-manual-download.adoc
@@ -1,5 +1,4 @@
-//[#manual-export]
-//=== Manuellen Export in Katalog starten
+:author: team-plenty-channel
 
 Du hast mindestens ein Datenfeld für den Export hinzugefügt? Dann kannst du die Katalogdaten manuell exportieren. In welchem Format die Daten exportiert werden, legst du in den Formateinstellungen des Katalogs fest. Zurzeit kannst du Daten in den Formaten CSV, TXT, JSON und XML herunterladen.
 
@@ -38,7 +37,7 @@ Live-Export starten::
 //tag::live-export[]
 Beim Live-Export wird die Datei erstellt und auch gleich automatisch auf deinen Rechner heruntergeladen. Du kannst den Fortschritt des Exports in Echtzeit im Tab *Datenexport* verfolgen. Aber:
 
-* Du darfst das Tab *Datenexport* nicht schließen oder neu laden, während der Export läuft. Wenn du es doch tust, wird der Export angehalten.
+* Das Tab *Datenexport* darf nicht geschlossen oder neu geladen werden, während der Export läuft. Wenn du es doch tust, wird der Export angehalten.
 * Du kannst Live-Exporte mehrerer Kataloge gleichzeitig durchführen. Einen neuen Live-Export für denselben Katalog kannst du aber erst starten, wenn der laufende Export abgeschlossen ist.
 
 . Öffne das Menü *Daten » Kataloge*. +
@@ -48,7 +47,7 @@ Beim Live-Export wird die Datei erstellt und auch gleich automatisch auf deinen 
 *_Oder:_* Noch schneller geht es, wenn du den Live-Export über die *Weiteren Aktionen* (material:more_vert[]) in der Katalogübersicht startest. +
 → Das Tab *Datenexport* wird geöffnet. +
 → Der Export wird gestartet. +
-*_Wichtig:_* Während der Export läuft darfst du das Tab *Datenexport* nicht schließen oder neu laden. Wenn du es doch tust, wird der Export angehalten. +
+*_Wichtig:_* Das Tab *Datenexport* darf nicht geschlossen oder neu geladen werden, während der Export läuft. Wenn du es doch tust, wird der Export angehalten. +
 → Der Fortschritt wird in Echtzeit angezeigt. +
 → Wenn der Export abgeschlossen ist, wirst die Datei automatisch auf deinem Rechner gespeichert.
 //end::live-export[]
