--- a/docs/de-de/modules/daten/partials/catalogue-overview.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-overview.adoc
@@ -1,3 +1,5 @@
+:author: team-plenty-channel
+
 Die Katalogübersicht ist das Erste was du siehst, wenn du das Menü *Daten » Kataloge* öffnest.
 
 image::daten:catalogue-overview-in-colours.png[]
