--- a/docs/de-de/modules/daten/partials/catalogue-manual-download.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-manual-download.adoc
@@ -2,18 +2,30 @@
 
 Du hast mindestens ein Datenfeld für den Export hinzugefügt? Dann kannst du die Katalogdaten manuell exportieren. In welchem Format die Daten exportiert werden, legst du in den Formateinstellungen des Katalogs fest. Zurzeit kannst du Daten in den Formaten CSV, TXT, JSON und XML herunterladen.
 
-Du hast zwei Möglichkeiten für den Export:
+Du hast zwei Möglichkeiten, die Katalogdaten manuell zu exportieren:
 
-* Asynchroner Download = Der Export läuft im Hintergrund. Wenn der Download abgeschlossen ist, lädtst du die Exportdatei über die Notifications (material:notifications[]) herunter.
-* Live-Export = Die Datei wird automatisch auf deinen Rechner heruntergeladen. Du kannst den Fortschritt des Exports in Echtzeit verfolgen. Nachteil: Du darfst das plentymarkets Tab nicht schließen oder neu laden, während der Export läuft. Wenn du es doch tust, wird der Export gestoppt.
+[cols="1,3a"]
+|===
+| Asynchroner Download
+| Der Export läuft im Hintergrund. Wenn der Download abgeschlossen ist, lädtst du die Exportdatei über die Notifications (material:notifications[]) herunter.
+
+| Live-Export
+| Die Datei wird automatisch auf deinen Rechner heruntergeladen. Du kannst den Fortschritt des Exports in Echtzeit verfolgen. +
+*_Aber:_* Das plentymarkets Tab *Datenexport* darf nicht geschlossen oder neu geladen werden, während der Export läuft. Wenn du es doch tust, wird der Export gestoppt.
+
+|===
 
 [tabs]
 ====
 Asynchronen Download starten::
 +
 --
+
 //tag::async-export[]
 Beim asynchronen Download läuft der Export im Hintergrund. Es wird also _kein_ Fenster angezeigt, über das du die Datei sofort herunterladen kannst. Auch der Export kleiner Datenmengen dauert ca. 30 Minuten. Wenn der Download abgeschlossen ist, kannst du die Exportdatei über die Notifications (material:notifications[]) herunterladen.
+
+[.instruction]
+Asynchronen Download starten:
 
 . Öffne das Menü *Daten » Kataloge*. +
 → Die Katalog-Übersicht wird geöffnet.
@@ -29,16 +41,21 @@ Beim asynchronen Download läuft der Export im Hintergrund. Es wird also _kein_ 
 
 image::daten:katalog-export.gif[]
 //end::async-export[]
+
 --
  
 Live-Export starten::
 +
 --
+
 //tag::live-export[]
 Beim Live-Export wird die Datei erstellt und auch gleich automatisch auf deinen Rechner heruntergeladen. Du kannst den Fortschritt des Exports in Echtzeit im Tab *Datenexport* verfolgen. Aber:
 
 * Das Tab *Datenexport* darf nicht geschlossen oder neu geladen werden, während der Export läuft. Wenn du es doch tust, wird der Export angehalten.
 * Du kannst Live-Exporte mehrerer Kataloge gleichzeitig durchführen. Einen neuen Live-Export für denselben Katalog kannst du aber erst starten, wenn der laufende Export abgeschlossen ist.
+
+[.instruction]
+Live-Export starten:
 
 . Öffne das Menü *Daten » Kataloge*. +
 → Die Katalog-Übersicht wird geöffnet.
@@ -50,18 +67,17 @@ Beim Live-Export wird die Datei erstellt und auch gleich automatisch auf deinen 
 *_Wichtig:_* Das Tab *Datenexport* darf nicht geschlossen oder neu geladen werden, während der Export läuft. Wenn du es doch tust, wird der Export angehalten. +
 → Der Fortschritt wird in Echtzeit angezeigt. +
 → Wenn der Export abgeschlossen ist, wirst die Datei automatisch auf deinem Rechner gespeichert.
-//end::live-export[]
 
 [TIP]
 .Live-Export stoppen
-====
+======
 
 Du willst den Live-Export anhalten? Kein Problem:
 
 * Klicke im Tab *Datenexport* in der blauen Leiste ganz rechts auf *Export abbrechen* (material:highlight_off[]). +
 → Der Export wird angehalten. +
 *_Wichtig:_* Der Export kann nicht fortgesetzt werden. Starte bei Bedarf einen neuen Export.
-====
-
+======
+//end::live-export[]
 --
 ====
