--- a/docs/de-de/modules/daten/partials/catalogue-menu.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-menu.adoc
@@ -1,3 +1,5 @@
+:author: team-plenty-channel
+
 Wenn du das Menü *Daten » Kataloge* öffnest, siehst du als erstes die Katalogübersicht.
 xref:daten:catalogues-first-contact.adoc#catalogue-overview[Diese Katalogübersicht kannst du hier kennenlernen.]
 
