--- a/docs/en-gb/modules/data/partials/catalogue-manual-download.adoc
+++ b/docs/en-gb/modules/data/partials/catalogue-manual-download.adoc
@@ -2,18 +2,30 @@
 
 Have you added at least one data field to the export? Then download the catalogue data manually. The format in which the data is exported depends on the format settings of the catalogue. You can export data in CSV, TXT, JSON and XML files.
 
-There are two ways to create the export file:
+There are two ways to manually export the catalogue data:
 
-* Asynchronous download = The export runs in the background. Once the export is completed, you download the export file from the Notifications (material:notifications[]).
-* Live export = The file is downloaded to your computer automatically. You can follow the export progress in real time. But beware: Do not close or reload the plentymarkets Tab while the export is in progress. If you do so, the export will be cancelled.
+[cols="1,3a"]
+|===
+| Asynchronous download
+| The export runs in the background. Once the export is completed, you download the export file from the Notifications (material:notifications[]).
+
+| Live export
+| The file is downloaded to your computer automatically. You can follow the export progress in real time. +
+*_However:_* Do not close or reload the plentymarkets tab *Data export* while the export is in progress. If you do so, the export will be cancelled.
+
+|===
 
 [tabs]
 ====
 Starting an asynchronous download::
 +
 --
+
 //tag::async-export[]
 For asynchronous downloads, the export runs in the background. So note that there will be _no_ window for downloading the file straight away. Even exporting small amounts of data will take around 30 minutes. When the export is completed, you can download the export file from the Notifications (material:notifications[]).
+
+[.instruction]
+Starting an asynchronous download:
 
 . Go to *Data » Catalogues*. +
 → The catalogue overview opens.
@@ -29,16 +41,21 @@ Once the export is finished, you will be notified (material:notifications_none[]
 
 image::data:catalogue-export.gif[]
 //end::async-export[]
+
 --
  
 Starting a live export::
 +
 --
+
 //tag::live-export[]
 The live export creates the file and automatically downloads it to your computer. In the tab *Data export*, you can follow the export progress in real time. However:
 
-* Do not close or reload the tab *Data export* while the export is in progress. If you do, the export stops and is cancelled.
+* Do not close or reload the plentymarkets tab *Data export* while the export is in progress. If you do, the export stops and is cancelled.
 * You can start live exports for several catalogues at the same time. However, you can only start a new live export for the same catalogue once the current export is complete.
+
+[.instruction]
+Starting a live export:
 
 . Go to *Data » Catalogues*. +
 → The catalogue overview opens.
@@ -47,21 +64,20 @@ The live export creates the file and automatically downloads it to your computer
 *_Or:_* Even quicker: Start the live export from the *Additional actions* (material:more_vert[]) in the catalogue overview. +
 → The tab *Data export* opens. +
 → The export starts. +
-*_Important:_* Do not close or reload the tab *Data export* while the export is in progress. If you do, the export stops and is cancelled. +
+*_Important:_* Do not close or reload the plentymarkets tab *Data export* while the export is in progress. If you do, the export stops and is cancelled. +
 → The progress is shown in real time. +
 → The file is automatically saved on your computer when the export is done.
-//end::live-export[]
 
 [TIP]
 .Stopping a live export
-====
+======
 
 Do you want to stop a live export? No problem:
 
 * In the tab *Data export* click on *Cancel export* (material:highlight_off[]) at the very right of the blue bar. +
 → The export is stopped. +
 *_Important:_* The export cannot be restarted. If necessary, start a new export.
-====
-
+======
+//end::live-export[]
 --
 ====
