replace messenger.adoc with messenger-testphase.adoc

--- a/docs/en-gb/modules/crm/pages/edit-contact.adoc
+++ b/docs/en-gb/modules/crm/pages/edit-contact.adoc
@@ -1040,11 +1040,11 @@ You can use various filters to retrieve specific information about your contact'
 [#messenger]
 === Messenger
 
-Here, you can see all messages that are saved for the contact. Click on *New message* (material:add[]) to open the messenger and to create a message.
+Here, you can see all messages that are saved for the contact. Click on *New message* (material:add[]) to open the messenger and to create a message. In the recipient field, the contact ID is already preselected. You can add further recipients.
 
 Click on material:more_vert[] in the line of the message to edit or delete the conversation. The colour of the circle shows the editing status of the message. material:circle[role=skyBlue] means that the message is still unread, material:circle[role=darkGrey] means that the message has already been read. Click on material:refresh[] to reload the *Messenger* area.
 
-For further information, refer to the xref:crm:messenger.adoc#[Messenger] page.
+For further information, refer to the xref:crm:messenger-testphase.adoc#[Messenger] page.
 
 [#options]
 === Options
