--- a/docs/en-gb/modules/crm/pages/quick-search.adoc
+++ b/docs/en-gb/modules/crm/pages/quick-search.adoc
@@ -182,8 +182,9 @@ Click on material:add[] *New offer* right next to *OFFERS* to create a new offer
 
 | *MESSENGER*
 |Opens the *Messenger* area further down in this view. +
-Click on material:add[] *New message* right next to *MESSENGER* to open the editing window for creating a new message further down in this view. The stop watch in the top right corner of the Messenger area starts automatically once you open the message. Next to *Minutes* field, click on *Billable* (material:toggle_off[] terra:pay_cash[]) to bill the minutes. +
-*_Note:_* For further information, refer to the xref:crm:messenger.adoc#[Messenger] page.+
+Click on material:add[] *New message* right next to *MESSENGER* to open the editing window for creating a new message further down in this view. The stop watch in the bottom right of the Messenger area starts automatically once you open the message.  Click on material:more_vert[] and activate (material:toggle_on[role=skyBlue]) the option *Capture minutes* to capture the minutes for this message. + 
+When you click on *CAPTURE MINUTES*, you can decide whether it is about *Free minutes* or *Paid minutes*. +
+*_Note:_* For further information, refer to the xref:crm:messenger-testphase.adoc#[Messenger] page.+
 *_Note:_* If the data record is a guest order, the fields *MESSENGER* and *New message* are not available.
 
 | *TICKETS*
