--- a/docs/en-gb/modules/orders/pages/subscription.adoc
+++ b/docs/en-gb/modules/orders/pages/subscription.adoc
@@ -687,18 +687,20 @@ Use the messenger to create notes about your contacts in the back end. These not
 [.instruction]
 Proceed as follows to create a new note:
 
-. Click on *New message* (icon:plus-square[role="green"]). +
+. Go to *Orders » Subscription*.
+. Open the subscription.
+. On the left side, click on *Messenger*.
+. Click on *New message* (material:add[]). +
 → A text editing window opens.
-. Select one or more recipients.
-. Enter a title.
+. Select one or more recipients. +
+*_Note:_* The ID of the subscription is already preselected.
+. Enter the subject.
 . Enter the text. +
-→ The editing window also offers you formatting options for the note.
-. Optionally, attach a file with *Attach files*.
-. Click on *Send* (icon:envelope-o[role="purple"]).
+→ When double-clicking on the word, some formatting options for this message become visible.
+. Optionally, attach a file by clicking on material:attach_file[] (*Add attachments*).
+. Click on material:visibility_off[] *WHISPER* to send the message.
 
-You can open the note either in the *Messenger* section of the subscription detail view or you can view the note in the *Messenger* section of the contact. To see it there, go to the selected contact in the contact overview. You can find a more detailed explanation about the messenger and notes in the xref:crm:messenger.adoc#[Managing messages with the messenger] chapter of the manual.
-
-Select whether you want to have the messages sorted in descending or ascending order by choosing the *Sorting* from the drop-down list accordingly.
+You can open the note either in the *Messenger* section of the subscription detail view or you can view the note in the *Messenger* section of the contact. To see it there, go to the selected contact in the contact overview. You can find a more detailed explanation on the xref:crm:messenger-testphase.adoc#[Messenger] page of the manual.
 
 [#1000]
 === History
