--- a/docs/de-de/modules/crm/pages/crm.adoc
+++ b/docs/de-de/modules/crm/pages/crm.adoc
@@ -9,7 +9,7 @@ Erstelle xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kunden
 
 Über die xref:crm:schnellsuche.adoc#[Schnellsuche] kannst du alle Informationen eines Kontakts oder die Adressdaten einer Gastbestellung auf einen Blick aufrufen. In diesem Bereich kannst du außerdem DSGVO-gemäß alle Daten zu einem Kontakt oder einer Gastbestellung herunterladen und Datensätze anonymisieren.
 
-Nutze den xref:crm:messenger.adoc#[Messenger], um Nachrichten zu erstellen, die deinen Kontakten zugeordnet werden. Diese Nachrichten sind nur in deinem plentymarkets Backend sichtbar und können nicht von deinen Kontakten aufgerufen werden.
+Nutze den xref:crm:messenger-testphase.adoc#[Messenger], um Nachrichten zu erstellen, die deinen Kontakten zugeordnet werden. Diese Nachrichten sind nur in deinem plentymarkets Backend sichtbar und können nicht von deinen Kontakten aufgerufen werden.
 
 Alle E-Mails, die über plentymarkets versendet werden, basieren auf E-Mail-Vorlagen. Erfahre, wie du xref:crm:e-mails-versenden.adoc#1200[E-Mail-Vorlagen erstellst] und wie du den xref:crm:e-mails-versenden.adoc#2300[automatischen Versand] für deine E-Mail-Vorlagen einrichtest. Nutze den xref:crm:emailbuilder-testphase.adoc#[neuen EmailBuilder], um deine Vorlagen noch schneller und intuitiver zu erstellen.
 
@@ -71,6 +71,6 @@ Richte einen xref:crm:newsletter-versenden.adoc#[Newsletter]-Dienst in deinem Sy
 [.col-md-6]
 .Nachrichten verwalten
 ======
-* xref:crm:messenger.adoc#[Messenger verwenden]
+* xref:crm:messenger-testphase.adoc#[Messenger verwenden]
 ======
 ====
