--- a/docs/de-de/modules/crm/pages/schnellsuche.adoc
+++ b/docs/de-de/modules/crm/pages/schnellsuche.adoc
@@ -180,8 +180,9 @@ Mit einem Klick auf material:add[] *Neues Angebot* rechts neben *ANGEBOTE* wird 
 
 | *MESSENGER*
 |Öffnet weiter unten den Bereich *Messenger*. +
-Mit einem Klick auf material:add[] *Neue Nachricht* rechts neben *MESSENGER* öffnet sich weiter unten das Bearbeitungsfenster zum Erstellen einer neuen Nachricht. Die Stoppuhr oben rechts im Messenger-Bereich startet automatisch, sobald die neue Nachricht geöffnet wird. Klicke neben dem Feld *Minuten* auf *Kostenpflichtig* (material:toggle_off[] terra:pay_cash[]), um die Zeit abzurechnen. +
-*_Hinweis:_* Weitere Informationen findest du auf der Handbuchseite xref:crm:messenger.adoc#[Messenger]. +
+Mit einem Klick auf material:add[] *Neue Nachricht* rechts neben *MESSENGER* öffnet sich weiter unten das Bearbeitungsfenster zum Erstellen einer neuen Nachricht. Die ID des Kontakts ist bereits vorausgefüllt. Die Stoppuhr unten rechts startet automatisch, sobald die neue Nachricht geöffnet wird. Klicke auf material:more_vert[] und aktiviere (material:toggle_on[role=skyBlue]) die Option *Minuten erfassen*, um Minuten für diese Nachricht zu erfassen. + 
+Wenn du auf *MINUTEN ERFASSEN* klickst, kannst du entscheiden, ob es sich um *Freiminuten* oder *Bezahlte Minuten* handelt. +
+*_Hinweis:_* Weitere Informationen findest du auf der Handbuchseite xref:crm:messenger-testphase.adoc#[Messenger]. +
 *_Hinweis:_* Wenn es sich bei dem Datensatz um eine Gastbestellung handelt, sind die Felder *MESSENGER* und *Neue Nachricht* ausgegraut.
 
 | *TICKETS*
