--- a/docs/de-de/modules/daten/partials/catalogue-manual-download.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-manual-download.adoc
@@ -1,13 +1,13 @@
 :author: team-plenty-channel
 
-Du hast mindestens ein Datenfeld für den Export hinzugefügt? Dann kannst du die Katalogdaten manuell exportieren. In welchem Format die Daten exportiert werden, legst du in den Formateinstellungen des Katalogs fest. Zurzeit kannst du Daten in den Formaten CSV, TXT, JSON und XML herunterladen.
+Du hast mindestens ein Datenfeld für den Export hinzugefügt? Dann kannst du die Katalogdaten manuell exportieren. In welchem Format die Daten exportiert werden, legst du in den xref:daten:standardformate-exportieren.adoc#format-settings[Formateinstellungen des Katalogs] fest. Zurzeit kannst du Daten in den Formaten CSV, TXT, JSON und XML herunterladen.
 
 Du hast zwei Möglichkeiten, die Katalogdaten manuell zu exportieren:
 
 [cols="1,3a"]
 |===
 | Asynchroner Download
-| Der Export läuft im Hintergrund. Wenn der Download abgeschlossen ist, lädtst du die Exportdatei über die Notifications (material:notifications[]) herunter.
+| Der Export läuft im Hintergrund. Wenn der Download abgeschlossen ist, lädst du die Exportdatei über die Notifications (material:notifications[]) herunter.
 
 | Live-Export
 | Die Datei wird automatisch auf deinen Rechner heruntergeladen. Du kannst den Fortschritt des Exports in Echtzeit verfolgen. +
