--- a/docs/de-de/modules/daten/partials/catalogues-manage.adoc
+++ b/docs/de-de/modules/daten/partials/catalogues-manage.adoc
@@ -1,3 +1,5 @@
+:author: team-plenty-channel
+
 Lerne, wie du vorhandene Kataloge verwaltest. Diese Informationen gelten für Marktplatz-Formate und für Standardformate.
 
 [#catalogue-rights]
