--- a/docs/en-gb/modules/data/partials/catalogue-overview.adoc
+++ b/docs/en-gb/modules/data/partials/catalogue-overview.adoc
@@ -1,3 +1,5 @@
+:author: team-plenty-channel
+
 The catalogue overview is the first thing you see when you open the menu *Data » Catalogues*.
 
 image::data:catalogue-overview-in-colours.png[]
