--- a/docs/en-gb/modules/markets/partials/catalogue-mapping.adoc
+++ b/docs/en-gb/modules/markets/partials/catalogue-mapping.adoc
@@ -31,7 +31,7 @@ ifdef::bol.com[]
 endif::bol.com[]
 → In the right column, you map the plentymarkets data fields. Any plentymarkets data fields that you already mapped are also shown in the right column.
 . Now, map suitable plentymarkets data fields to the market data fields. +
-*_Tip:_* Need more information about the plentymarkets data fields? Then head over to the manual page for the standard format xref:data:catalogue-item.adoc#[Item (new)]. +
+*_Tip:_* Need more information about the plentymarkets data fields? Then head over to the manual page for the standard format xref:data:item.adoc#[Item (new)]. +
 For each marketplace data field, you have the following mapping options. These mapping options are described in more detail in the info boxes below:
 ** *Simple 1:1 mapping*
 ** *Complex 1:1 mapping*
