ADD generate sub procedure

--- a/docs/de-de/modules/automatisierung/pages/aktionen.adoc
+++ b/docs/de-de/modules/automatisierung/pages/aktionen.adoc
@@ -362,6 +362,7 @@ Verfügbare Subaktionen für diese Aktion:
 * xref:automatisierung:subaktionen.adoc#180[Drucken]
 * xref:automatisierung:subaktionen.adoc#280[Speichern]
 * xref:automatisierung:subaktionen.adoc#350[Zwischenspeichern]
+* xref:automatisierung:subaktionen.adoc#192[Generieren]
 * xref:automatisierung:subaktionen.adoc#270[Sounds]
 
 [#120]
@@ -451,6 +452,7 @@ Verfügbare Subaktionen für diese Aktion:
 * xref:automatisierung:subaktionen.adoc#180[Drucken]
 * xref:automatisierung:subaktionen.adoc#280[Speichern]
 * xref:automatisierung:subaktionen.adoc#350[Zwischenspeichern]
+* xref:automatisierung:subaktionen.adoc#192[Generieren]
 * xref:automatisierung:subaktionen.adoc#270[Sounds]
 
 [#140]
@@ -683,6 +685,7 @@ Verfügbare Subaktionen für diese Aktion:
 * xref:automatisierung:subaktionen.adoc#180[Drucken]
 * xref:automatisierung:subaktionen.adoc#280[Speichern]
 * xref:automatisierung:subaktionen.adoc#280[Zwischenspeichern]
+* xref:automatisierung:subaktionen.adoc#192[Generieren]
 * xref:automatisierung:subaktionen.adoc#270[Sounds]
 
 [#190]
@@ -1019,6 +1022,7 @@ Verfügbare Subaktionen für diese Aktion:
 * xref:automatisierung:subaktionen.adoc#180[Drucken]
 * xref:automatisierung:subaktionen.adoc#280[Speichern]
 * xref:automatisierung:subaktionen.adoc#350[Zwischenspeichern]
+* xref:automatisierung:subaktionen.adoc#192[Generieren]
 * xref:automatisierung:subaktionen.adoc#270[Sounds]
 
 [#250]
@@ -1055,6 +1059,7 @@ Verfügbare Subaktionen für diese Aktion:
 * xref:automatisierung:subaktionen.adoc#180[Drucken]
 * xref:automatisierung:subaktionen.adoc#280[Speichern]
 * xref:automatisierung:subaktionen.adoc#350[Zwischenspeichern]
+* xref:automatisierung:subaktionen.adoc#192[Generieren]
 * xref:automatisierung:subaktionen.adoc#270[Sounds]
 
 [#255]
@@ -1207,6 +1212,7 @@ Verfügbare Subaktionen für diese Aktion:
 * xref:automatisierung:subaktionen.adoc#180[Drucken]
 * xref:automatisierung:subaktionen.adoc#280[Speichern]
 * xref:automatisierung:subaktionen.adoc#350[Zwischenspeichern]
+* xref:automatisierung:subaktionen.adoc#192[Generieren]
 * xref:automatisierung:subaktionen.adoc#270[Sounds]
 
 [#280]
@@ -1302,6 +1308,7 @@ Verfügbare Subaktionen für diese Aktion:
 * xref:automatisierung:subaktionen.adoc#180[Drucken]
 * xref:automatisierung:subaktionen.adoc#280[Speichern]
 * xref:automatisierung:subaktionen.adoc#350[Zwischenspeichern]
+* xref:automatisierung:subaktionen.adoc#192[Generieren]
 * xref:automatisierung:subaktionen.adoc#270[Sounds]
 
 [#300]
@@ -1338,6 +1345,7 @@ Verfügbare Subaktionen für diese Aktion:
 * xref:automatisierung:subaktionen.adoc#180[Drucken]
 * xref:automatisierung:subaktionen.adoc#280[Speichern]
 * xref:automatisierung:subaktionen.adoc#350[Zwischenspeichern]
+* xref:automatisierung:subaktionen.adoc#192[Generieren]
 * xref:automatisierung:subaktionen.adoc#270[Sounds]
 
 [#310]
@@ -1602,6 +1610,56 @@ Verfügbare Subaktionen für diese Aktion:
 * xref:automatisierung:subaktionen.adoc#280[Speichern]
 * xref:automatisierung:subaktionen.adoc#270[Sounds]
 
+[#345]
+==== Proformarechnung
+
+Mit der Aktion *Proformarechnung* werden für die Aufträge xref:auftraege:proformarechnung.adoc#[Proformarechnungen erzeugt]. Diese Proformarechnungen werden per Subaktion zum Beispiel gedruckt oder gespeichert.
+
+[.subhead]
+Arbeitsschritte
+
+Die Aktion steht für folgende Arbeitsschritte zur Verfügung:
+
+* xref:automatisierung:arbeitsschritte.adoc#auftragsabwicklung[Auftragsabwicklung]
+* xref:automatisierung:arbeitsschritte.adoc#auftragsbearbeitung[Auftragsbearbeitung]
+
+[.subhead]
+Einstellungen
+
+<<table-procedure-pro-forma-invoice>> erläutert die zusätzlichen Einstellungen der Aktion. Informationen zu den allgemeinen Einstellungen für Aktionen findest du in <<table-procedures-general-settings>>.
+
+[[table-procedure-pro-forma-invoice]]
+.Aktion **Proformarechnung**
+[cols="1,3"]
+|====
+|Einstellung |Erläuterung
+
+| **Rechnung für Lieferauftrag** +
+(nur plentyBase/Terra)
+|Wählen, ob für Lieferaufträge, die in der **Artikelerfassung** über **Auftrag teilen** erstellt wurden, automatisch eine Rechnung am Hauptauftrag erzeugt werden soll. +
+**Nicht erzeugen** = Für Lieferaufträge wird nicht automatisch eine Rechnung erzeugt. +
+**Am Hauptauftrag erzeugen** = Die Rechnung wird für den Hauptauftrag erzeugt.
+|====
+
+[.subhead]
+Aktionen für Fehlerfall
+
+Verfügbare Aktionen für den Fehlerfall:
+
+* xref:automatisierung:aktionen.adoc#170[Auftrag]
+* xref:automatisierung:aktionen.adoc#220[E-Mail]
+
+[.subhead]
+Subaktionen
+
+Verfügbare Subaktionen für diese Aktion:
+
+* xref:automatisierung:subaktionen.adoc#180[Drucken]
+* xref:automatisierung:subaktionen.adoc#280[Speichern]
+* xref:automatisierung:subaktionen.adoc#350[Zwischenspeichern]
+* xref:automatisierung:subaktionen.adoc#192[Generieren]
+* xref:automatisierung:subaktionen.adoc#270[Sounds]
+
 [#350]
 ==== Rechnung
 
@@ -1649,6 +1707,7 @@ Verfügbare Subaktionen für diese Aktion:
 * xref:automatisierung:subaktionen.adoc#180[Drucken]
 * xref:automatisierung:subaktionen.adoc#280[Speichern]
 * xref:automatisierung:subaktionen.adoc#350[Zwischenspeichern]
+* xref:automatisierung:subaktionen.adoc#192[Generieren]
 * xref:automatisierung:subaktionen.adoc#270[Sounds]
 
 [#355]
@@ -1729,6 +1788,7 @@ Verfügbare Subaktionen für diese Aktion:
 * xref:automatisierung:subaktionen.adoc#180[Drucken]
 * xref:automatisierung:subaktionen.adoc#280[Speichern]
 * xref:automatisierung:subaktionen.adoc#350[Zwischenspeichern]
+* xref:automatisierung:subaktionen.adoc#192[Generieren]
 * xref:automatisierung:subaktionen.adoc#270[Sounds]
 
 [#370]
@@ -1947,6 +2007,7 @@ Verfügbare Subaktionen für diese Aktion:
 * xref:automatisierung:subaktionen.adoc#180[Drucken]
 * xref:automatisierung:subaktionen.adoc#280[Speichern]
 * xref:automatisierung:subaktionen.adoc#350[Zwischenspeichern]
+* xref:automatisierung:subaktionen.adoc#192[Generieren]
 * xref:automatisierung:subaktionen.adoc#270[Sounds]
 
 [#400]
@@ -2192,6 +2253,7 @@ Verfügbare Subaktionen für diese Aktion:
 * xref:automatisierung:subaktionen.adoc#180[Drucken]
 * xref:automatisierung:subaktionen.adoc#280[Speichern]
 * xref:automatisierung:subaktionen.adoc#350[Zwischenspeichern]
+* xref:automatisierung:subaktionen.adoc#192[Generieren]
 * xref:automatisierung:subaktionen.adoc#270[Sounds]
 
 [#424]
@@ -2228,6 +2290,7 @@ Verfügbare Subaktionen für diese Aktion:
 * xref:automatisierung:subaktionen.adoc#180[Drucken]
 * xref:automatisierung:subaktionen.adoc#280[Speichern]
 * xref:automatisierung:subaktionen.adoc#350[Zwischenspeichern]
+* xref:automatisierung:subaktionen.adoc#192[Generieren]
 * xref:automatisierung:subaktionen.adoc#270[Sounds]
 
 [#426]
@@ -2264,6 +2327,7 @@ Verfügbare Subaktionen für diese Aktion:
 * xref:automatisierung:subaktionen.adoc#180[Drucken]
 * xref:automatisierung:subaktionen.adoc#280[Speichern]
 * xref:automatisierung:subaktionen.adoc#350[Zwischenspeichern]
+* xref:automatisierung:subaktionen.adoc#192[Generieren]
 * xref:automatisierung:subaktionen.adoc#270[Sounds]
 
 [#430]
