ADJUST reversal reference

--- a/docs/de-de/modules/auftraege/pages/dokumentenarchiv-testphase.adoc
+++ b/docs/de-de/modules/auftraege/pages/dokumentenarchiv-testphase.adoc
@@ -138,7 +138,7 @@ Dies ist eine Standardspalte.
 Diese Spalte wird standardmäßig nicht angezeigt.
 
 | *Stornoreferenz*
-|Ist ein Stornobeleg verfügbar, wird das stornierte Dokument angezeigt. Existiert ein storniertes Dokument, wird der Stornobeleg angezeigt.
+|Wurde ein Dokument storniert, wird hier der Stornobeleg angezeigt. Handelt es sich um einen Stornobeleg, wird hier das stornierte Dokument angezeigt.
 
 |===
 
