--- a/docs/en-gb/modules/data/pages/document-archive-data-test-phase.adoc
+++ b/docs/en-gb/modules/data/pages/document-archive-data-test-phase.adoc
@@ -136,7 +136,7 @@ This is a default column.
 This column is not shown by default.
 
 | *Reversal reference*
-|If a reversal document is available, the reversed document is shown. If a reversed document exists, the reversal document is shown.
+|If a document was reversed, the reversal document is displayed here. If it is a reversal document, the reversed document is displayed here.
 
 |===
 
